Normalize package.jsons

--- a/packages/homelesness/package.json
+++ b/packages/homelesness/package.json
@@ -28,15 +28,15 @@
     "start": "yarn start:dev",
     "lint": "eslint --fix src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
-    "build": "rimraf dist && babel-node tools/build.js",
-    "analyze": "babel-node ./tools/analyzeBundle.js",
+    "build": "rimraf dist && cross-env NODE_ENV=production babel-node tools/build.js",
+    "analyze": "cross-env NODE_ENV=production babel-node ./tools/analyzeBundle.js",
     "prestart:dev": "npm run clean",
     "start:dev": "cross-env NODE_ENV=development babel-node server",
     "start:prod": "cross-env NODE_ENV=production node server",
     "test": "mocha --opts ./mocha.opts 'src/**/*.test.js'",
     "test:watch": "npm run test -- --watch",
-    "coverage": "babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
-    "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js src/**/*.test.js && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
+    "coverage": "cross-env NODE_ENV=test babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
+    "test:cover:travis": "cross-env NODE_ENV=test babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js src/**/*.test.js && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "show:coverage": "npm run test:cover && open coverage/index.html",
     "prebump": "NODE_ENV=production npm run build",
     "bump": "bump --prompt --commit",
