--- a/packages/transportation/package.json
+++ b/packages/transportation/package.json
@@ -25,16 +25,16 @@
     "start": "npm run start:dev",
     "lint": "esw src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
-    "build": "babel-node tools/build.js",
+    "build": "cross-env NODE_ENV=production babel-node tools/build.js",
     "jinn": "jinn",
-    "analyze": "babel-node ./tools/analyzeBundle.js",
+    "analyze": "cross-env NODE_ENV=production babel-node ./tools/analyzeBundle.js",
     "start:dev": "cross-env NODE_ENV=development babel-node server",
     "start:production": "npm run build && npm run start:prod:server",
     "start:prod:server": "cross-env NODE_ENV=production babel-node server",
     "test": "mocha --opts ./mocha.opts 'src/**/*.test.js'",
     "test:watch": "npm run test -- --watch",
-    "coverage": "babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
-    "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js src/**/*.test.js && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
+    "coverage": "cross-env NODE_ENV=test babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
+    "test:cover:travis": "cross-env NODE_ENV=test babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js src/**/*.test.js && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "show:coverage": "npm run test:cover && open coverage/index.html"
   },
   "dependencies": {
