--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -12,8 +12,8 @@
   "license": "MIT",
   "scripts": {
     "clean": "rimraf ./build",
-    "dev": "babel-node tools/dev",
-    "build": "webpack --config tools/webpack.config.babel.js --colors",
+    "dev": "cross-env NODE_ENV=development babel-node tools/dev",
+    "build": "NODE_ENV=production webpack --config webpack.config.babel.js --colors",
     "build:server": "babel src --out-dir build --copy-files",
     "build:prod": "NODE_ENV=production run-s build build:server",
     "build:all": "BABEL_ENV=production run-s clean build build:server",
