--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -35,8 +35,8 @@
     "build": "rimraf dist && cross-env NODE_ENV=production babel-node ./tools/build.js",
     "analyze": "cross-env NODE_ENV=production babel-node ./tools/analyzeBundle.js",
     "prestart:dev": "npm run clean",
-    "start:dev": "cross-env BABEL_ENV=development babel-node server",
-    "start:prod": "cross-env BABEL_ENV=production node server",
+    "start:dev": "cross-env NODE_ENV=development babel-node server",
+    "start:prod": "cross-env NODE_ENV=production node server",
     "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'",
     "test:watch": "npm run test -- --watch",
     "coverage": "NODE_ENV=test babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
@@ -135,7 +135,7 @@
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^1.3.3",
     "react-addons-test-utils": "^15.5.3",
-    "react-hot-loader": "^3.0.0-beta.7",
+    "react-hot-loader": "^4.0.0",
     "react-transform-hmr": "^1.0.4",
     "redux-immutable-state-invariant": "^1.2.4",
     "redux-mock-store": "^1.2.1",
@@ -148,7 +148,7 @@
     "version-bump-prompt": "^3.1.0",
     "webpack": "^2.5.1",
     "webpack-blocks": "^1.0.0-rc.2",
-    "webpack-blocks-utils": "2.0.0.alpha4",
+    "webpack-blocks-utils": "2.0.0-alpha4",
     "webpack-bundle-analyzer": "^2.1.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-dev-server": "^2.4.1",
