--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -32,7 +32,7 @@
     "start": "yarn start:dev",
     "lint": "eslint --fix src tools server webpack.config.* --color",
     "lint:watch": "npm run lint -- --watch",
-    "build": "rimraf dist && cross-env NODE_ENV=production babel-node ./tools/build.js",
+    "build": "rimraf dist && cross-env NODE_ENV=production npx webpack --config ./webpack.config.js",
     "analyze": "cross-env NODE_ENV=production babel-node ./tools/analyzeBundle.js",
     "prestart:dev": "npm run clean",
     "start:dev": "cross-env NODE_ENV=development babel-node server",
