--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/hackoregon/civic#readme",
   "dependencies": {
     "@hackoregon/civic-housing": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
+    "compression": "^1.6.2",
     "express": "^4.14.1",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
@@ -28,14 +30,16 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "webpack": "^2.5.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.17.0",
+    "autoprefixer": "^6.7.7",
+    "webpack-blocks": "^1.0.0-rc.2",
+    "webpack-blocks-utils": "2.0.0-alpha.4"
   },
   "devDependencies": {
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
-    "react-hot-loader": "^4.0.0",
-    "autoprefixer": "^6.7.7",
-    "webpack": "^2.5.1",
-    "webpack-blocks": "^1.0.0-rc.2",
-    "webpack-blocks-utils": "2.0.0-alpha.4"
+    "react-hot-loader": "^4.0.0"
   }
 }
