--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -43,7 +43,6 @@
     "postbump": "editme -w"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "0.0.10",
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "compression": "^1.6.2",
     "cross-env": "^3.1.3",
@@ -70,6 +69,7 @@
   "devDependencies": {
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/mock-wrapper": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
