--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "yarn start:dev",
-    "start:dev": "cross-env NODE_ENV=development babel-node server",
+    "start:dev": "cross-env NODE_ENV=development babel-node server/dev.js",
     "start:prod": "yarn run build && cross-env NODE_ENV=production node server",
     "build": "rimraf dist && cross-env NODE_ENV=production npx webpack --config ./webpack.config.js"
   },
@@ -22,6 +22,7 @@
   "dependencies": {
     "@hackoregon/civic-housing": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
+    "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "express": "^4.14.1",
     "react": "^15.5.3",
