--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@hackoregon/civic-housing": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
+    "autoprefixer": "^6.7.7",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "express": "^4.14.1",
@@ -30,14 +31,14 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
+    "react-typekit": "^1.1.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "webpack": "^2.5.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.17.0",
-    "autoprefixer": "^6.7.7",
     "webpack-blocks": "^1.0.0-rc.2",
-    "webpack-blocks-utils": "2.0.0-alpha.4"
+    "webpack-blocks-utils": "2.0.0-alpha.4",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.17.0"
   },
   "devDependencies": {
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
