--- a/packages/homelessness/package.json
+++ b/packages/homelessness/package.json
@@ -26,24 +26,12 @@
   "scripts": {
     "clean": "rimraf build && mkdir build",
     "start": "yarn start:dev",
-    "lint": "eslint --fix src tools server webpack.config.* --color",
-    "lint:watch": "npm run lint -- --watch",
-    "build": "rimraf dist && cross-env NODE_ENV=production babel-node tools/build.js",
-    "analyze": "cross-env NODE_ENV=production babel-node ./tools/analyzeBundle.js",
-    "prestart:dev": "npm run clean",
-    "start:dev": "cross-env NODE_ENV=development babel-node server",
+    "build": "rimraf dist && cross-env NODE_ENV=production npx webpack --config ./webpack.config.js",
+    "start:dev": "cross-env NODE_ENV=development npx babel-node server",
     "start:prod": "cross-env NODE_ENV=production node server",
-    "test": "mocha --opts ./mocha.opts 'src/**/*.test.js'",
-    "test:watch": "npm run test -- --watch",
-    "coverage": "cross-env NODE_ENV=test babel-node node_modules/isparta/bin/isparta cover --root src --report html npm run test --reporter progress",
-    "test:cover:travis": "cross-env NODE_ENV=test babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js src/**/*.test.js && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
-    "show:coverage": "npm run test:cover && open coverage/index.html",
-    "prebump": "NODE_ENV=production npm run build",
-    "bump": "bump --prompt --commit",
-    "postbump": "editme -w"
+    "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "0.0.10",
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "compression": "^1.6.2",
     "cross-env": "^3.1.3",
@@ -69,7 +57,7 @@
   },
   "devDependencies": {
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
-    "@hackoregon/webpacker": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/mock-wrapper": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
@@ -105,17 +93,6 @@
     "coveralls": "^2.11.15",
     "css-loader": "^0.28.0",
     "enzyme": "^2.7.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-babel": "^4.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-prefer-object-spread": "^1.1.0",
-    "eslint-plugin-react": "^6.10.0",
-    "eslint-watch": "^2.1.14",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.4",
     "jest": "^20.0.4",
@@ -123,14 +100,12 @@
     "jsdom-global": "^2.1.0",
     "json-loader": "^0.5.4",
     "lerna": "^2.0.0",
-    "lodash-webpack-plugin": "^0.11.2",
     "mocha": "^3.2.0",
     "mocha-clean": "^1.0.0",
     "mochawesome": "^1.5.1",
     "nock": "^9.0.2",
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
-    "postcss-loader": "^1.3.3",
     "react-addons-test-utils": "^15.5.3",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-transform-hmr": "^1.0.4",
@@ -145,11 +120,6 @@
     "url-loader": "^0.5.7",
     "version-bump-prompt": "^3.1.0",
     "webpack": "^2.5.1",
-    "webpack-bundle-analyzer": "^2.1.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.17.0",
-    "webpack-md5-hash": "^0.0.5",
-    "webpack-node-externals": "^1.5.4"
+    "webpack-blocks": "^1.0.0-rc.2"
   }
 }
