--- a/packages/homelessness/package.json
+++ b/packages/homelessness/package.json
@@ -36,6 +36,7 @@
     "compression": "^1.6.2",
     "cross-env": "^3.1.3",
     "d3-format": "^1.2.0",
+    "emotion": "^9.1.1",
     "express": "^4.14.1",
     "invariant": "^2.2.2",
     "isomorphic-fetch": "^2.2.1",
