--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "yarn start:dev",
-    "start:dev": "cross-env NODE_ENV=development npx babel-node server/dev.js",
+    "start:dev": "cross-env NODE_ENV=development babel-node server/dev.js",
     "start:prod": "yarn run build && cross-env NODE_ENV=production node server",
     "build": "rimraf dist && cross-env NODE_ENV=production npx webpack --config ./webpack.config.js"
   },
@@ -20,8 +20,8 @@
   },
   "homepage": "https://github.com/hackoregon/civic#readme",
   "dependencies": {
-    "@hackoregon/civic-housing": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-emergency-response": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/civic-housing": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
     "chalk": "^1.1.3",
@@ -42,6 +42,7 @@
     "webpack-hot-middleware": "^2.17.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/dev-server": "^1.0.0-alpha.1c62c05f",
     "react-hot-loader": "^4.0.0"
