--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 cache: yarn
 node_js:
 - '6.11.4'
-# after_success:
-# - npm run test:cover:travis
 script:
-- npm run test
+- yarn bootstrap
+- yarn build
+- yarn test
