--- a/packages/webpacker/package.json
+++ b/packages/webpacker/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "start": "npm install",
-    "build": "npx babel src --out-dir lib",
+    "build": "babel src --out-dir lib",
     "bump": "npx bump --prompt --commit --push",
     "postbump": "npx editme -w & npm prune --production",
     "postpublish": "npm start",
