--- a/packages/budget/package.json
+++ b/packages/budget/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "clean": "rimraf ./build && mkdir build",
     "start": "yarn start:dev",
-    "build": "cross-env NODE_ENV=production babel-node tools/build.js",
+    "build": "rimraf dist && cross-env NODE_ENV=production npx webpack --config ./webpack.config.js",
     "start:dev": "cross-env NODE_ENV=development npx babel-node server",
     "start:prod": "cross-env NODE_ENV=production node server",
     "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'"
