--- a/packages/transportation/package.json
+++ b/packages/transportation/package.json
@@ -24,8 +24,8 @@
   "scripts": {
     "clean": "rimraf ./build && mkdir build",
     "start": "npm run start:dev",
-    "build": "rimraf dist && cross-env NODE_ENV=production npx webpack --config ./webpack.config.js",
-    "start:dev": "cross-env NODE_ENV=development npx babel-node server",
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack --config ./webpack.config.js",
+    "start:dev": "cross-env NODE_ENV=development babel-node server",
     "start:prod": "cross-env NODE_ENV=production node server",
     "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'"
   },
