--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -62,6 +62,7 @@
   "devDependencies": {
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/mock-wrapper": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
