--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -29,6 +29,7 @@
     "express": "^4.14.1",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
+    "react-emotion": "^9.1.1",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
@@ -42,10 +43,10 @@
     "webpack-hot-middleware": "^2.17.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/dev-server": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
+    "babel-cli": "^6.24.1",
     "react-hot-loader": "^4.0.0"
   }
 }
