--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "link:all": "lerna link",
     "lint": "lerna run lint -- --fix",
     "storybook": "BABEL_ENV=esm start-storybook -p 6006",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "travis": "make travis"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.15",
