--- a/packages/mock-wrapper/package.json
+++ b/packages/mock-wrapper/package.json
@@ -14,8 +14,16 @@
     "build": "BABEL_ENV=esm npm run build:esm && BABEL_ENV=cjs npm run build:cjs"
   },
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
-    "react-hot-loader": "^4.0.0"
+    "react-hot-loader": "^4.0.0",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.1.0"
   }
 }
