--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
   "private": true,
   "scripts": {
     "bootstrap": "yarn install --frozen-lockfile && lerna bootstrap",
-    "build-storybook": "build-storybook",
     "build": "lerna run build",
     "tag": "lerna publish --skip-npm",
     "canary": "lerna publish --skip-git --skip-npm --canary",
     "clean": "lerna clean && rimraf node_modules",
     "watch": "node scripts/watch",
-    "deploy-storybook": "storybook-to-ghpages",
+    "deploy-storybook": "BABEL_ENV=esm storybook-to-ghpages",
     "in": "lerna run --scope",
     "link:all": "lerna link",
     "lint": "lerna run lint -- --fix",
@@ -38,12 +37,13 @@
     "travis": "make travis"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.3.15",
-    "@storybook/addon-info": "^3.3.15",
-    "@storybook/addon-knobs": "^3.3.15",
-    "@storybook/addon-links": "^3.3.15",
-    "@storybook/addon-notes": "^3.3.15",
-    "@storybook/react": "^3.3.15",
+    "@storybook/addon-actions": "^3.4.2",
+    "@storybook/addon-info": "^3.4.2",
+    "@storybook/addon-knobs": "^3.4.2",
+    "@storybook/addon-links": "^3.4.2",
+    "@storybook/addon-notes": "^3.4.2",
+    "@storybook/react": "^3.4.2",
+    "@storybook/storybook-deployer": "^2.3.0",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
