Add the new 2018 suite to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
 matrix:
   include:
     - env: SUITE=2017
+    - env: SUITE=2018
     - env: SUITE=COMPONENT_LIBRARY
 script:
   - yarn run travis
