--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -21,13 +21,20 @@
   },
   "homepage": "https://github.com/hackoregon/civic#readme",
   "dependencies": {
+    "chalk": "^1.1.3",
+    "compression": "^1.6.2",
+    "express": "^4.14.1"
+  },
+  "devDependencies": {
+    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-emergency-response": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-housing": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/dev-server": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
-    "chalk": "^1.1.3",
-    "compression": "^1.6.2",
-    "express": "^4.14.1",
+    "babel-cli": "^6.24.1",
+    "react-hot-loader": "^4.0.0",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-emotion": "^9.1.1",
@@ -42,12 +49,5 @@
     "webpack-blocks-utils": "2.0.0-alpha.4",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.17.0"
-  },
-  "devDependencies": {
-    "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
-    "@hackoregon/dev-server": "^1.0.0-alpha.1c62c05f",
-    "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
-    "babel-cli": "^6.24.1",
-    "react-hot-loader": "^4.0.0"
   }
 }
