--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -65,6 +65,7 @@
     "react-motion": "^0.4.7",
     "react-router": "^3.0.0",
     "react-selectize": "^2.1.0",
-    "recharts": "^0.22.1"
+    "recharts": "^0.22.1",
+    "victory": "^0.26.0"
   }
 }
