--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "scripts": {
     "bootstrap": "yarn install --frozen-lockfile && lerna bootstrap",
     "build": "lerna run build",
+    "configure": "lerna run configure",
     "tag": "lerna publish --skip-npm",
     "canary": "lerna publish --skip-git --skip-npm --canary",
     "clean": "lerna clean && rimraf node_modules",
