--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -7,7 +7,7 @@
     "start": "yarn start:dev",
     "start:dev": "cross-env NODE_ENV=development babel-node server/dev.js",
     "start:prod": "yarn run build && cross-env NODE_ENV=production node server",
-    "build": "rimraf dist && cross-env NODE_ENV=production webpack --config ./webpack.config.js",
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack --progress --config ./webpack.config.js",
     "test": "echo 'No tests!'"
   },
   "repository": {
