--- a/package.json
+++ b/package.json
@@ -110,8 +110,6 @@
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "0.0.10",
-    "victory": "^0.26.0",
-    "webpack-blocks": "^1.0.0"
+    "@hackoregon/civic-server": "0.0.10"
   }
 }
