--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -67,6 +67,7 @@
     "react-router": "^3.0.0",
     "react-selectize": "^2.1.0",
     "recharts": "^0.22.1",
-    "victory": "^0.26.0"
+    "victory": "^0.26.0",
+    "webpack-blocks": "^1.0.0"
   }
 }
