Continuous delivery of the 2017 and 2018 docker containers
Modeled after how we deploy APIs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: node_js
 cache: yarn
 node_js:
   - '8.11.1'
+services:
+  - docker
 install:
   - npm i -g npx
+  - npm i -g rimraf
+  - npm i -g cross-env
   - yarn bootstrap
   - yarn run configure
 matrix:
