add a11y to component library for accessibility testing
Co-authored-by: Jason Leonhard <devbrights@gmail.com>
Co-authored-by: Doren Proctor <dorenproctor@gmail.com>

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "travis": "make travis"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^3.4.3",
     "@storybook/addon-actions": "^3.4.2",
     "@storybook/addon-info": "^3.4.2",
     "@storybook/addon-knobs": "^3.4.2",
