TEMP - change branch to docker-cd

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: node_js
 cache: yarn
 node_js:
   - '6.11.4'
+services:
+  - docker
 install:
   - npm i -g npx
+  - npm i -g rimraf
+  - npm i -g cross-env
   - yarn bootstrap
   - yarn run configure
 matrix:
