--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
-    "@hackoregon/civic-server": "0.0.10"
+    "@hackoregon/civic-server": "0.0.10",
+    "deck.gl": "^5.2.4"
   }
 }
