--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
   },
   "dependencies": {
     "@hackoregon/civic-server": "0.0.10",
+    "d3-request": "^1.0.6",
     "deck.gl": "^5.2.4"
   }
 }
