--- a/packages/webpack-common/package.json
+++ b/packages/webpack-common/package.json
@@ -13,7 +13,7 @@
     "autoprefixer": "^6.7.7",
     "lodash-webpack-plugin": "^0.11.5",
     "webpack": "^2.5.1",
-    "webpack-blocks": "^1.0.0-rc.2",
+    "webpack-blocks": "^1.0.0",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.17.0"
   }
