--- a/packages/civic-babel-presets/package.json
+++ b/packages/civic-babel-presets/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-dynamic-import-node": "1.0.2",
     "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
