--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -43,6 +43,7 @@
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-shallow-compare": "^15.4.1",
     "react-addons-test-utils": "^15.5.3",
+    "react-dimensions": "^1.3.1",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
     "source-map-support": "^0.4.11"
