--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -53,6 +53,7 @@
     "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.5",
+    "create-react-ref": "^0.1.0",
     "d3": "^4.8.0",
     "d3-format": "1.3.0",
     "d3-sankey": "^0.4.2",
@@ -67,6 +68,7 @@
     "react-dom": "^15.5.3",
     "react-faux-dom": "^3.0.1",
     "react-map-gl": "^3.2.7",
+    "react-map-gl-geocoder": "^1.0.0",
     "react-motion": "^0.4.7",
     "react-router": "^3.0.0",
     "react-selectize": "^2.1.0",
