--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -43,7 +43,6 @@
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-shallow-compare": "^15.4.1",
     "react-addons-test-utils": "^15.5.3",
-    "react-dimensions": "^1.3.1",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
     "source-map-support": "^0.4.11"
@@ -73,6 +72,10 @@
     "react-share": "^2.2.0",
     "recharts": "^0.22.1",
     "victory": "^0.26.0",
-    "webpack-blocks": "^1.0.0"
+    "webpack-blocks": "^1.0.0",
+    "react-leaflet": "^1.1.6",
+    "react-dimensions": "^1.3.1",
+    "styled-components": "^1.4.2",
+    "react-select": "^1.0.0-rc.3"
   }
 }
