--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "nuka-carousel": "^4.4.0"
   },
   "devDependencies": {
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
