--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "lint": "lerna run lint -- --fix",
     "storybook": "BABEL_ENV=esm start-storybook -p 6006",
     "test": "lerna run test",
-    "travis": "make travis"
+    "travis": "make travis",
+    "pretty": "prettier --write \"./**/*.{js,jsx,json,css,md}\""
   },
   "husky": {
     "hooks": {
@@ -43,7 +44,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,json,css,md}": [
+    "*.{js,jsx,json,css,md}": [
       "prettier --write",
       "git add"
     ]
