--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^1.3.3",
-    "prettier": "^1.16.4",
+    "prettier": "1.16.4",
     "prop-types": "^15.5.3",
     "react-addons-test-utils": "^15.5.3",
     "react-hot-loader": "^3.0.0-beta.7",
