update all webpack related dependencies to latest

--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -47,10 +47,10 @@
     "redux-form": "^6.6.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0",
-    "webpack": "^3.12.0",
-    "webpack-blocks": "^1.0.0",
+    "webpack": "^4.29.6",
+    "webpack-blocks": "^2.0.0-rc",
     "webpack-blocks-utils": "2.0.0-alpha.4",
-    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-middleware": "^3.6.1",
     "webpack-hot-middleware": "^2.17.0"
   }
 }
