--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -34,20 +34,20 @@
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.24.1",
-    "react-hot-loader": "^4.0.0",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-emotion": "^9.1.1",
+    "react-hot-loader": "^4.0.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
     "react-typekit": "^1.1.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
-    "webpack": "^3.12.0",
-    "webpack-blocks": "^1.0.0",
+    "webpack": "^4.29.6",
+    "webpack-blocks": "^2.0.0-rc",
     "webpack-blocks-utils": "2.0.0-alpha.4",
-    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-middleware": "^3.6.1",
     "webpack-hot-middleware": "^2.17.0"
   }
 }
