--- a/packages/2018-disaster-resilience/package.json
+++ b/packages/2018-disaster-resilience/package.json
@@ -59,10 +59,10 @@
     "chai-enzyme": "^0.6.1",
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
-    "clean-webpack-plugin": "^0.1.15",
+    "clean-webpack-plugin": "^2.0.0",
     "colors": "^1.1.2",
     "coveralls": "^2.11.15",
-    "css-loader": "^0.28.0",
+    "css-loader": "^2.1.1",
     "enzyme": "^2.7.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -72,9 +72,9 @@
     "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-react": "^6.10.0",
     "eslint-watch": "^2.1.14",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.4",
     "jest": "^20.0.4",
@@ -89,7 +89,7 @@
     "nock": "^9.0.2",
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "^3.0.0",
     "react-addons-test-utils": "^15.5.3",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-transform-hmr": "^1.0.4",
@@ -102,7 +102,7 @@
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.7",
     "version-bump-prompt": "^3.1.0",
-    "webpack": "^3.12.0",
-    "webpack-blocks": "^1.0.0"
+    "webpack": "^4.29.6",
+    "webpack-blocks": "^2.0.0-rc"
   }
 }
