--- a/packages/budget/package.json
+++ b/packages/budget/package.json
@@ -66,10 +66,10 @@
     "chai-enzyme": "^0.6.1",
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
-    "clean-webpack-plugin": "^0.1.15",
+    "clean-webpack-plugin": "^2.0.0",
     "colors": "^1.1.2",
     "coveralls": "^2.11.15",
-    "css-loader": "^0.28.0",
+    "css-loader": "^2.1.1",
     "enzyme": "^2.7.1",
     "eslint": "^3.19.0",
     "isparta": "^4.0.0",
@@ -86,7 +86,7 @@
     "nock": "^9.0.2",
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "^3.0.0",
     "react-addons-test-utils": "^15.5.3",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-transform-hmr": "^1.0.4",
@@ -99,7 +99,7 @@
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.7",
     "version-bump-prompt": "^3.1.0",
-    "webpack": "^3.12.0",
-    "webpack-blocks": "^1.0.0"
+    "webpack": "^4.29.6",
+    "webpack-blocks": "^2.0.0-rc"
   }
 }
