--- a/packages/homelessness/package.json
+++ b/packages/homelessness/package.json
@@ -83,17 +83,17 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-1": "^6.24.1",
     "babel-register": "^6.23.0",
-    "babili-webpack-plugin": "0.0.10",
+    "babili-webpack-plugin": "0.1.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
     "chalk": "^1.1.3",
     "change-case": "3.0.1",
     "cheerio": "^0.22.0",
-    "clean-webpack-plugin": "^0.1.15",
+    "clean-webpack-plugin": "^2.0.0",
     "colors": "^1.1.2",
     "coveralls": "^2.11.15",
-    "css-loader": "^0.28.0",
+    "css-loader": "^2.1.1",
     "enzyme": "^2.7.1",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.4",
@@ -121,7 +121,7 @@
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.7",
     "version-bump-prompt": "^3.1.0",
-    "webpack": "^3.12.0",
-    "webpack-blocks": "^1.0.0"
+    "webpack": "^4.29.6",
+    "webpack-blocks": "^2.0.0-rc"
   }
 }
