--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -69,11 +69,11 @@
     "chai-enzyme": "^0.6.1",
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
-    "clean-webpack-plugin": "^0.1.15",
+    "clean-webpack-plugin": "^2.0.0",
     "colors": "^1.1.2",
     "coveralls": "^2.11.15",
     "enzyme": "^2.7.1",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.4",
     "jest": "^20.0.4",
@@ -86,8 +86,8 @@
     "nock": "^9.0.2",
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
-    "react-hot-loader": "^4.0.0",
     "react-addons-test-utils": "^15.5.3",
+    "react-hot-loader": "^4.0.0",
     "react-transform-hmr": "^1.0.4",
     "redux-immutable-state-invariant": "^1.2.4",
     "redux-mock-store": "^1.2.1",
@@ -96,8 +96,8 @@
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
     "version-bump-prompt": "^3.1.0",
-    "webpack": "^3.12.0",
-    "webpack-blocks": "^1.0.0",
+    "webpack": "^4.29.6",
+    "webpack-blocks": "^2.0.0-rc",
     "webpack-blocks-utils": "2.0.0-alpha.4"
   }
 }
