--- a/packages/webpack-common/package.json
+++ b/packages/webpack-common/package.json
@@ -14,6 +14,7 @@
     "lodash-webpack-plugin": "^0.11.5",
     "webpack": "^4.29.6",
     "webpack-blocks": "^2.0.0-rc",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.6.1",
     "webpack-hot-middleware": "^2.17.0"
   }
