--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -32,7 +32,7 @@
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/dev-server": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
-    "autoprefixer": "^6.7.7",
+    "autoprefixer": "^9.4.10",
     "babel-cli": "^6.24.1",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
@@ -45,6 +45,7 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
     "webpack-blocks": "^2.0.0-rc",
     "webpack-blocks-utils": "2.0.0-alpha.4",
     "webpack-dev-middleware": "^3.6.1",
