--- a/packages/emergency-response/package.json
+++ b/packages/emergency-response/package.json
@@ -61,7 +61,7 @@
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/mock-wrapper": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
-    "autoprefixer": "^6.7.7",
+    "autoprefixer": "^9.4.10",
     "babel-cli": "^6.24.1",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
@@ -108,10 +108,11 @@
     "rimraf": "^2.5.4",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.7",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "version-bump-prompt": "^3.1.0",
     "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
     "webpack-blocks": "^2.0.0-rc"
   }
 }
