--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -63,7 +63,7 @@
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/mock-wrapper": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
-    "autoprefixer": "^6.7.7",
+    "autoprefixer": "^9.4.10",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
@@ -97,6 +97,7 @@
     "sinon-chai": "^2.8.0",
     "version-bump-prompt": "^3.1.0",
     "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
     "webpack-blocks": "^2.0.0-rc",
     "webpack-blocks-utils": "2.0.0-alpha.4"
   }
