--- a/packages/civic-babel-presets/.babelrc
+++ b/packages/civic-babel-presets/.babelrc
@@ -1,30 +1,73 @@
 {
   "presets": [
-    [ "es2015", { "modules": false }],
-    "react",
-    "stage-1"
+    [
+      "@babel/preset-env",
+      {
+        "modules": false
+      }
+    ],
+    "@babel/preset-react"
   ],
   "env": {
     "development": {
       "plugins": [
         "react-hot-loader/babel",
-        "transform-class-properties",
-        [ "emotion", { "sourceMap": true, "inline": true, "autoLabel": true }]
+        "@babel/plugin-proposal-class-properties",
+        [
+          "emotion",
+          {
+            "sourceMap": true,
+            "inline": true,
+            "autoLabel": true
+          }
+        ]
       ]
     },
     "production": {
       "plugins": [
-        "transform-class-properties",
-        "transform-react-constant-elements",
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-transform-react-constant-elements",
         "transform-react-remove-prop-types",
-        [ "emotion", { "hoist": true }]
+        [
+          "emotion",
+          {
+            "hoist": true
+          }
+        ]
       ]
     },
     "test": {
       "plugins": [
-        "transform-es2015-modules-commonjs",
+        "@babel/plugin-transform-modules-commonjs",
         "dynamic-import-node"
       ]
     }
-  }
+  },
+  "plugins": [
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-import-meta",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-json-strings",
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    "@babel/plugin-proposal-function-sent",
+    "@babel/plugin-proposal-export-namespace-from",
+    "@babel/plugin-proposal-numeric-separator",
+    "@babel/plugin-proposal-throw-expressions",
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-logical-assignment-operators",
+    "@babel/plugin-proposal-optional-chaining",
+    [
+      "@babel/plugin-proposal-pipeline-operator",
+      {
+        "proposal": "minimal"
+      }
+    ],
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-proposal-do-expressions"
+  ]
 }
