--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -26,6 +26,8 @@
     "express": "^4.14.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/node": "^7.0.0",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-emergency-response": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-housing": "^1.0.0-alpha.1c62c05f",
@@ -33,7 +35,6 @@
     "@hackoregon/dev-server": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^9.4.10",
-    "babel-cli": "^6.24.1",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-emotion": "^9.1.1",
@@ -45,9 +46,9 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
     "webpack-blocks": "^2.0.0-rc",
     "webpack-blocks-utils": "2.0.0-alpha.4",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.6.1",
     "webpack-hot-middleware": "^2.17.0"
   }
