--- a/packages/transportation/package.json
+++ b/packages/transportation/package.json
@@ -30,9 +30,9 @@
     "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "axios": "^0.16.1",
-    "babel-polyfill": "^6.23.0",
     "compression": "^1.6.2",
     "cross-env": "^3.1.3",
     "express": "^4.14.1",
@@ -60,11 +60,14 @@
     "webpack-cli": "3.2.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/node": "^7.0.0",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/mock-wrapper": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^9.4.10",
-    "babel-cli": "^6.24.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.4.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
@@ -105,7 +108,7 @@
     "url-loader": "^1.1.2",
     "version-bump-prompt": "^3.1.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-blocks": "^2.0.0-rc"
+    "webpack-blocks": "^2.0.0-rc",
+    "webpack-cli": "^3.2.3"
   }
 }
