update test suite dependencies

--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -39,9 +39,9 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-plugin-add-module-exports": "^1.0.0",
-    "chai": "^3.5.0",
+    "chai": "^4.2.0",
     "chai-enzyme": "^0.6.1",
-    "enzyme": "^2.7.1",
+    "enzyme": "^3.9.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-config-airbnb-base": "^11.0.0",
@@ -53,20 +53,20 @@
     "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-react": "^6.10.0",
     "ignore-styles": "^5.0.1",
-    "mocha": "^3.2.0",
+    "mocha": "^6.0.2",
     "mocha-clean": "^1.0.0",
     "react-addons-css-transition-group": "^15.4.1",
     "react-addons-shallow-compare": "^15.4.1",
     "react-addons-test-utils": "^15.5.3",
-    "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
+    "sinon": "^7.2.7",
+    "sinon-chai": "^3.3.0",
     "source-map-support": "^0.4.11",
     "webpack": "^4.29.6",
     "webpack-blocks": "^2.0.0-rc",
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
-    "chai-enzyme": "^0.6.1",
+    "chai-enzyme": "^1.0.0-beta.1",
     "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.5",
