--- a/package.json
+++ b/package.json
@@ -64,19 +64,19 @@
     "@storybook/theming": "^5.0.1",
     "autoprefixer": "^9.4.10",
     "babel-eslint": "^9.0.0",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.0",
     "babili-webpack-plugin": "0.1.2",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "chai-enzyme": "^0.6.1",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-enzyme": "^1.0.0-beta.1",
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
     "clean-webpack-plugin": "^2.0.0",
     "colors": "^1.1.2",
-    "coveralls": "^2.11.15",
+    "coveralls": "^3.0.3",
     "css-loader": "^2.1.1",
-    "enzyme": "^2.7.1",
+    "enzyme": "^3.9.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-config-prettier": "^4.0.0",
@@ -93,17 +93,17 @@
     "husky": "^1.3.1",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.4",
-    "jest": "^20.0.4",
-    "jsdom": "^9.8.3",
-    "jsdom-global": "^2.1.0",
+    "jest": "^24.5.0",
+    "jsdom": "^14.0.0",
+    "jsdom-global": "^3.0.2",
     "json-loader": "^0.5.4",
     "lerna": "^2.5.1",
     "lint-staged": "^8.1.4",
     "lodash-webpack-plugin": "^0.11.2",
-    "mocha": "^3.2.0",
+    "mocha": "^6.0.2",
     "mocha-clean": "^1.0.0",
-    "mochawesome": "^1.5.1",
-    "nock": "^9.0.2",
+    "mochawesome": "^3.1.1",
+    "nock": "^10.0.6",
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^3.0.0",
@@ -116,8 +116,8 @@
     "redux-mock-store": "^1.2.1",
     "regenerator-runtime": "^0.10.1",
     "rimraf": "^2.6.2",
-    "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
+    "sinon": "^7.2.7",
+    "sinon-chai": "^3.3.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "version-bump-prompt": "^3.1.0",
@@ -131,7 +131,5 @@
     "webpack-md5-hash": "^0.0.6",
     "webpack-node-externals": "^1.5.4"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
