--- a/packages/2018-neighborhood-development/package.json
+++ b/packages/2018-neighborhood-development/package.json
@@ -33,7 +33,7 @@
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "axios": "^0.18.0",
     "compression": "^1.6.2",
-    "cross-env": "^3.1.3",
+    "cross-env": "^5.2.0",
     "express": "^4.14.1",
     "invariant": "^2.2.2",
     "ramda": "^0.23.0",
@@ -56,17 +56,17 @@
     "@hackoregon/mock-wrapper": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^9.4.10",
-    "babel-jest": "^23.4.2",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "chai-enzyme": "^0.6.1",
+    "babel-jest": "^24.5.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-enzyme": "^1.0.0-beta.1",
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
     "clean-webpack-plugin": "^2.0.0",
     "colors": "^1.1.2",
-    "coveralls": "^2.11.15",
+    "coveralls": "^3.0.3",
     "css-loader": "^2.1.1",
-    "enzyme": "^2.7.1",
+    "enzyme": "^3.9.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-babel": "^4.0.1",
@@ -80,16 +80,16 @@
     "html-webpack-plugin": "^3.2.0",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.4",
-    "jest": "^20.0.4",
-    "jsdom": "^9.8.3",
-    "jsdom-global": "^2.1.0",
+    "jest": "^24.5.0",
+    "jsdom": "^14.0.0",
+    "jsdom-global": "^3.0.2",
     "json-loader": "^0.5.4",
     "lerna": "^2.0.0",
     "lodash-webpack-plugin": "^0.11.2",
-    "mocha": "^3.2.0",
+    "mocha": "^6.0.2",
     "mocha-clean": "^1.0.0",
-    "mochawesome": "^1.5.1",
-    "nock": "^9.0.2",
+    "mochawesome": "^3.1.1",
+    "nock": "^10.0.6",
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^3.0.0",
@@ -100,8 +100,8 @@
     "redux-mock-store": "^1.2.1",
     "regenerator-runtime": "^0.10.1",
     "rimraf": "^2.5.4",
-    "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
+    "sinon": "^7.2.7",
+    "sinon-chai": "^3.3.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "version-bump-prompt": "^3.1.0",
