--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "compression": "^1.6.2",
-    "cross-env": "^3.1.3",
+    "cross-env": "^5.2.0",
     "d3-format": "^1.2.0",
     "express": "^4.14.1",
     "invariant": "^2.2.2",
@@ -67,27 +67,27 @@
     "@hackoregon/mock-wrapper": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^9.4.10",
-    "babel-jest": "^23.4.2",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "chai-enzyme": "^0.6.1",
+    "babel-jest": "^24.5.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-enzyme": "^1.0.0-beta.1",
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
     "clean-webpack-plugin": "^2.0.0",
     "colors": "^1.1.2",
-    "coveralls": "^2.11.15",
-    "enzyme": "^2.7.1",
+    "coveralls": "^3.0.3",
+    "enzyme": "^3.9.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.4",
-    "jest": "^20.0.4",
-    "jsdom": "^9.8.3",
-    "jsdom-global": "^2.1.0",
+    "jest": "^24.5.0",
+    "jsdom": "^14.0.0",
+    "jsdom-global": "^3.0.2",
     "lodash-webpack-plugin": "^0.11.2",
-    "mocha": "^3.2.0",
+    "mocha": "^6.0.2",
     "mocha-clean": "^1.0.0",
-    "mochawesome": "^1.5.1",
-    "nock": "^9.0.2",
+    "mochawesome": "^3.1.1",
+    "nock": "^10.0.6",
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "^15.5.3",
@@ -97,8 +97,8 @@
     "redux-mock-store": "^1.2.1",
     "regenerator-runtime": "^0.10.1",
     "rimraf": "^2.5.4",
-    "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
+    "sinon": "^7.2.7",
+    "sinon-chai": "^3.3.0",
     "version-bump-prompt": "^3.1.0",
     "webpack": "^4.29.6",
     "webpack-blocks": "^2.0.0-rc",
