--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.3.4",
     "@babel/node": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-emergency-response": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-housing": "^1.0.0-alpha.1c62c05f",
