--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -30,6 +30,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
+    "@babel/register": "^7.0.0",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-emergency-response": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/civic-housing": "^1.0.0-alpha.1c62c05f",
