--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -37,10 +37,10 @@
     "@babel/plugin-proposal-throw-expressions": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-plugin-add-module-exports": "^1.0.0",
     "chai": "^4.2.0",
-    "chai-enzyme": "^0.6.1",
     "enzyme": "^3.9.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -77,6 +77,8 @@
     "d3-shape": "^1.0.6",
     "deck.gl": "^5.2.5",
     "emotion": "^9.1.1",
+    "enzyme-adapter-react-15": "^1.3.1",
+    "gl": "^4.1.1",
     "mapbox-gl": "^0.53.1",
     "prop-types": "^15.6.1",
     "ramda": "^0.23.0",
@@ -94,6 +96,7 @@
     "react-select": "^1.0.0-rc.3",
     "react-selectize": "^2.1.0",
     "react-share": "^2.2.0",
+    "react-test-renderer": "15",
     "recharts": "^0.22.1",
     "styled-components": "^1.4.2",
     "victory": "^0.26.0"
