--- a/packages/transportation/.babelrc
+++ b/packages/transportation/.babelrc
@@ -1,26 +1,3 @@
 {
-  "presets": [
-    "latest",
-    "react",
-    "stage-0"
-  ],
-  "env": {
-    "development": {
-      "presets": [
-        "react-hmre"
-      ],
-      "plugins": ["transform-class-properties"],
-    },
-    "production": {
-      "plugins": [
-        "transform-react-constant-elements",
-        "transform-react-remove-prop-types"
-      ]
-    },
-    "test": {
-      "plugins": [
-        "transform-es2015-modules-commonjs"
-      ]
-    }
-  }
+  "extends": "@hackoregon/civic-babel-presets/.babelrc"
 }
