update eslint and related dependencies

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "storybook": "BABEL_ENV=esm start-storybook -p 6006",
     "test": "lerna run test",
     "travis": "make travis",
-    "pretty": "prettier --write \"./**/*.{js,jsx,css,md}\""
+    "pretty": "prettier --write \"./**/*.{js,jsx,css,md}\"",
+    "eslint-check": "eslint --print-config . | eslint-config-prettier-check"
   },
   "husky": {
     "hooks": {
@@ -63,7 +64,7 @@
     "@storybook/storybook-deployer": "^2.8.1",
     "@storybook/theming": "^5.0.1",
     "autoprefixer": "^9.4.10",
-    "babel-eslint": "^9.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.0",
     "chai": "^4.2.0",
@@ -76,16 +77,16 @@
     "coveralls": "^3.0.3",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^6.10.0",
-    "eslint-watch": "^2.1.14",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-watch": "^5.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -95,7 +96,7 @@
     "jsdom": "^14.0.0",
     "jsdom-global": "^3.0.2",
     "json-loader": "^0.5.4",
-    "lerna": "^2.5.1",
+    "lerna": "^3.13.1",
     "lint-staged": "^8.1.4",
     "lodash-webpack-plugin": "^0.11.2",
     "mocha": "^6.0.2",
@@ -112,7 +113,7 @@
     "react-transform-hmr": "^1.0.4",
     "redux-immutable-state-invariant": "^1.2.4",
     "redux-mock-store": "^1.2.1",
-    "regenerator-runtime": "^0.10.1",
+    "regenerator-runtime": "^0.13.1",
     "rimraf": "^2.6.2",
     "sinon": "^7.2.7",
     "sinon-chai": "^3.3.0",
