--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -38,20 +38,20 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "babel-eslint": "^9.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-plugin-add-module-exports": "^1.0.0",
     "chai": "^4.2.0",
     "enzyme": "^3.9.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-config-airbnb-base": "^11.0.0",
-    "eslint-import-resolver-webpack": "^0.7.1",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-babel": "^4.0.1",
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-import-resolver-webpack": "^0.11.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prefer-object-spread": "^1.1.0",
-    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-react": "^7.12.4",
     "ignore-styles": "^5.0.1",
     "mocha": "^6.0.2",
     "mocha-clean": "^1.0.0",
@@ -67,7 +67,7 @@
   },
   "dependencies": {
     "chai-enzyme": "^1.0.0-beta.1",
-    "cheerio": "^0.22.0",
+    "cheerio": "^1.0.0-rc.2",
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.5",
     "create-react-ref": "^0.1.0",
