--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
   "parser": "babel-eslint",
-  "extends": ["airbnb", "prettier"],
+  "extends": [
+    "airbnb",
+    "prettier",
+    "prettier/react"
+  ],
   "env": {
     "mocha": true
   },
@@ -16,21 +20,12 @@
     "react/require-default-props": 0,
     "arrow-body-style": 0,
     "import/no-extraneous-dependencies": [
-      "error", {
+      "error",
+      {
         "devDependencies": [
           "packages/**/*.story.js",
           "packages/**/*.test.js"
-          ]
-      }
-    ],
-    "comma-dangle": [
-      "error",
-      {
-        "arrays": "always-multiline",
-        "objects": "always-multiline",
-        "imports": "always-multiline",
-        "exports": "always-multiline",
-        "functions": "ignore"
+        ]
       }
     ]
   },
