Upgrade to Emotion 10
Emotion 10 changes a lot of the way the package is supposed to be used.
We should update to the newer patterns after everything is tidy.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "deploy-storybook": "BABEL_ENV=esm storybook-to-ghpages",
     "in": "lerna run --scope",
     "link:all": "lerna link",
-    "lint": "lerna run lint -- --fix --no-bail",
+    "lint": "lerna run lint",
+    "lint:fix": "lerna run lint --no-bail -- --fix",
     "storybook": "BABEL_ENV=esm start-storybook -p 6006",
     "test": "lerna run test --no-bail",
     "travis": "make travis",
@@ -85,6 +86,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-emotion": "^10.0.7",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prefer-object-spread": "^1.1.0",
