--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -35,9 +35,9 @@
     "@hackoregon/dev-server": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^9.4.10",
+    "emotion": "^10.0.6",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
-    "react-emotion": "^9.1.1",
     "react-hot-loader": "^4.0.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
