--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -31,14 +31,15 @@
     "@babel/core": "^7.3.4",
     "@babel/node": "^7.2.2",
     "@babel/register": "^7.0.0",
-    "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
+    "@emotion/core": "^10.0.9",
+    "@emotion/styled": "^10.0.9",
     "@hackoregon/civic-babel-presets": "^1.0.0-alpha.1c62c05f",
+    "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/dev-server": "^1.0.0-alpha.1c62c05f",
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^9.4.10",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
-    "react-emotion": "^9.1.1",
     "react-hot-loader": "^4.0.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
