--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/hackoregon/civic#readme",
   "dependencies": {
+    "add": "^2.0.6",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "yarn": "^1.13.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -37,7 +39,7 @@
     "autoprefixer": "^9.4.10",
     "emotion": "^10.0.6",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react-dom": "npm:@hot-loader/react-dom",
     "react-hot-loader": "^4.0.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
