--- a/packages/2018-local-elections/package.json
+++ b/packages/2018-local-elections/package.json
@@ -38,7 +38,7 @@
     "invariant": "^2.2.2",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react-dom": "npm:@hot-loader/react-dom",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
@@ -93,7 +93,7 @@
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^3.0.0",
     "react-addons-test-utils": "^15.5.3",
-    "react-hot-loader": "^3.0.0-beta.7",
+    "react-hot-loader": "^4.0.0",
     "react-transform-hmr": "^1.0.4",
     "redux-immutable-state-invariant": "^1.2.4",
     "redux-mock-store": "^1.2.1",
