--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -39,7 +39,7 @@
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^9.4.10",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react-dom": "npm:@hot-loader/react-dom",
     "react-hot-loader": "^4.0.0",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
