--- a/packages/budget/package.json
+++ b/packages/budget/package.json
@@ -43,7 +43,7 @@
     "ramda": "^0.23.0",
     "rc-slider": "^7.0.2",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react-dom": "npm:@hot-loader/react-dom",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
@@ -91,7 +91,7 @@
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^3.0.0",
     "react-addons-test-utils": "^15.5.3",
-    "react-hot-loader": "^3.0.0-beta.7",
+    "react-hot-loader": "^4.0.0",
     "react-test-renderer": "15",
     "react-transform-hmr": "^1.0.4",
     "redux-immutable-state-invariant": "^1.2.4",
