--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -85,9 +85,9 @@
     "ramda": "^0.23.0",
     "rc-slider": "^7.0.2",
     "react": "^16.8.4",
+    "react-dom": "npm:@hot-loader/react-dom",
     "react-addons-transition-group": "16.0.0-alpha.3",
     "react-dimensions": "^1.3.1",
-    "react-dom": "^16.8.4",
     "react-faux-dom": "^3.0.1",
     "react-leaflet": "^1.1.6",
     "react-map-gl": "4.1.1",
