--- a/packages/homelessness/package.json
+++ b/packages/homelessness/package.json
@@ -44,7 +44,7 @@
     "query-string": "^4.3.3",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react-dom": "npm:@hot-loader/react-dom",
     "react-helmet": "^5.0.3",
     "react-leaflet": "^1.1.6",
     "react-redux": "^5.0.3",
@@ -119,7 +119,8 @@
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "^15.5.3",
-    "react-hot-loader": "^3.0.0-beta.7",
+    "react-hot-loader": "^4.0.0",
+
     "react-test-renderer": "15",
     "react-transform-hmr": "^1.0.4",
     "recharts": "^0.20.1",
