--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -47,7 +47,7 @@
     "query-string": "^4.3.3",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react-dom": "npm:@hot-loader/react-dom",
     "react-helmet": "^5.0.3",
     "react-leaflet": "^1.1.6",
     "react-redux": "^5.0.3",
