--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -25,6 +25,7 @@
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "express": "^4.14.1",
+    "prop-types": "^15.7.2",
     "yarn": "^1.13.0"
   },
   "devDependencies": {
