--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -24,7 +24,8 @@
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "express": "^4.14.1",
-    "nuka-carousel": "^4.5.3"
+    "nuka-carousel": "^4.5.3",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
