--- a/packages/emergency-response/package.json
+++ b/packages/emergency-response/package.json
@@ -40,6 +40,7 @@
     "invariant": "^2.2.2",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.0.3",
+    "prop-types": "^15.7.2",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
     "react-dom": "npm:@hot-loader/react-dom",
@@ -106,7 +107,6 @@
     "postcss-loader": "^3.0.0",
     "react-addons-test-utils": "^15.5.3",
     "react-hot-loader": "^4.0.0",
-
     "react-test-renderer": "15",
     "react-transform-hmr": "^1.0.4",
     "redux-immutable-state-invariant": "^1.2.4",
