--- a/packages/homelessness/package.json
+++ b/packages/homelessness/package.json
@@ -41,6 +41,7 @@
     "invariant": "^2.2.2",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.0.3",
+    "prop-types": "15.7.2",
     "query-string": "^4.3.3",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
@@ -120,7 +121,6 @@
     "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "^15.5.3",
     "react-hot-loader": "^4.0.0",
-
     "react-test-renderer": "15",
     "react-transform-hmr": "^1.0.4",
     "recharts": "^0.20.1",
