--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -44,6 +44,7 @@
     "invariant": "^2.2.2",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.0.3",
+    "prop-types": "^15.7.2",
     "query-string": "^4.3.3",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
