--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -97,7 +97,7 @@
     "react-select": "^1.0.0-rc.3",
     "react-selectize": "^2.1.0",
     "react-share": "^2.2.0",
-    "react-test-renderer": "15",
+    "react-test-renderer": "^16.8.4",
     "recharts": "^0.22.1",
     "styled-components": "^1.4.2",
     "victory": "^32.0.2"
