--- a/packages/emergency-response/package.json
+++ b/packages/emergency-response/package.json
@@ -29,7 +29,6 @@
     "start:prod:": "cross-env NODE_ENV=production node server",
     "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'",
     "lint": "eslint --fix src"
-
   },
   "dependencies": {
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
@@ -50,6 +49,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
+    "react-test-renderer": "^16.8.4",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
