--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -55,6 +55,7 @@
     "react-router": "^3.0.0",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
+    "react-test-renderer": "^16.8.4",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^3.0.0",
