--- a/packages/transportation/package.json
+++ b/packages/transportation/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
+    "react-test-renderer": "^16.8.4",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
